# Athena

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml
agent-plan/: atomic-wibbling-simon.md
agents/: __init__.py  coordinator.py  execution_agent.py  market_analyst.py  risk_manager.py  strategy_agent.py
architecture/: ATHENA_Architecture_Document.docx
communication/: __init__.py  decoder.py  encoder.py  latent_space.py  router.py
core/: __init__.py  base_agent.py  config.py  learning_hook.py  utils.py
evolution/: __init__.py  agent_generator.py  cooperative_evolution.py  workflow_discovery.py
ingest/: collect_data.py  config.yaml  process_data.py  symbols.yaml
learning/: __init__.py  nested_learning.py  repexp.py
memory/: __init__.py  agemem.py  graphiti_backend.py  operations.py
plans/sprint6-bugfix/: implementation-plan.md  overview.md  risks.md  technical-design.md
plans/sprint7-rev3-fixes/: implementation-plan.md  overview.md
plans/sprint8-review-fixes/: README.md
plans/sprint9-review-fixes/: README.md
project/: board.md  context.md  design.md  ideas.md  roadmap.md
project/decisions/: 2026-02-15-sprint-planning.md  sprint6-open-questions.md
tests/: test_agents.py  test_communication.py  test_coordinator_resolution.py  test_evolution.py  test_ingest_integration.py  test_integration_e2e.py  test_learning.py  test_learning_hook.py  test_memory.py  test_risk_math.py  test_strategy_math.py  test_trading.py
trading/: __init__.py  enums.py  market_data.py  order_management.py  portfolio.py
training/: __init__.py
(+216 files in other folders)
