[project]
name = "athena"
version = "0.1.0"
description = "Multi-agent financial advisory system with OLMoE inference on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    # Inference — Apple Silicon (mlx-lm primary, transformers fallback)
    "mlx>=0.30.6",
    "mlx-lm>=0.30.7",
    "mlx-metal>=0.30.6",
    # HuggingFace ecosystem
    "transformers>=5.2.0",
    "tokenizers>=0.22.2",
    "huggingface-hub>=1.5.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    # Core utilities
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.3",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "tzdata>=2025.2",
    "tqdm>=4.67.0",
    # HTTP / networking
    "httpx>=0.28.1",
    "httpcore>=1.0.9",
    "anyio>=4.12.1",
    # Misc
    "rich>=14.3.3",
    "protobuf>=6.33.5",
    # Memory — Graphiti + Neo4j
    "graphiti-core[groq]>=0.28.1",
    "neo4j>=6.1.0",
    "groq>=0.28.0",
    "voyageai>=0.3.7",
]

[project.optional-dependencies]
train = [
    # GRPO training — transformers backend only (not used on mlx path)
    "torch>=2.0.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
